--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -14,13 +14,15 @@ topnav:
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<html xmlns:wb="http://open.weibo.com/wb">
 <head>
 <title>Lucas Xu : {{ page.title }} </title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="language" content="en" />
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+<meta property="wb:webmaster" content="85ada6b02f0f02d5" />
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=" type="text/javascript" charset="utf-8"></script>
 </head>
 
 {% assign navTitle = 'Blog' %}
@@ -73,6 +75,7 @@ topnav:
               >Google</a>
           </li>
           </ul>
+<wb:livestream skin="silver" width="auto" height="500" ></wb:livestream>
         <br/>
       </div>
     </div>
