--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -22,7 +22,7 @@ topnav:
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 <meta property="wb:webmaster" content="85ada6b02f0f02d5" />
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=" type="text/javascript" charset="utf-8"></script>
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=4064321344" type="text/javascript" charset="utf-8"></script>
 </head>
 
 {% assign navTitle = 'Blog' %}
