--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -75,7 +75,7 @@ topnav:
               >Google</a>
           </li>
           </ul>
-<wb:livestream skin="silver" width="auto" height="500" ></wb:livestream>
+<wb:livestream skin="silver" border="n" width="auto" height="500" ></wb:livestream>
         <br/>
       </div>
     </div>
