--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -75,8 +75,7 @@ topnav:
               >Google</a>
           </li>
           </ul>
-<wb:livestream skin="silver" border="n" width="auto" height="500" ></wb:livestream>
-        <br/>
+<iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=2063991842&verifier=e0e8dc08&dpc=1"></iframe>        <br/>
       </div>
     </div>
     <div class="clear"></div>
