--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -76,7 +76,19 @@ topnav:
           </li>
           </ul>
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=2063991842&verifier=e0e8dc08&dpc=1"></iframe>        <br/>
-      </div>
+      
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style ">
+<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+<a class="addthis_button_tweet"></a>
+<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+<a class="addthis_counter addthis_pill_style"></a>
+</div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4fdf49b46dac2571"></script>
+<!-- AddThis Button END -->
+
+</div>
     </div>
     <div class="clear"></div>
   </div>
