--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -5,6 +5,24 @@ layout: default
 <div class="post">
   <h3>{{page.title}}</h3>
 
+
+<script type="text/javascript">
+var jiathis_config = {
+    shareImg:{
+        "showType":"ALL",
+        "bgColor":"",
+        "txtColor":"",
+        "text":"",
+        "services":"",
+        "position":"",
+        "imgwidth":"",
+        "imgheight":"",
+        "divname":""
+    }
+}
+</script>
+<script type='text/javascript' src='http://v2.jiathis.com/code/jia.js?uid=1336370704363698' charset='utf-8'></script>
+
 <!-- JiaThis Button BEGIN -->
 <div id="ckepop">
   <span class="jiathis_txt">分享到：</span>
