--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -77,16 +77,19 @@ topnav:
           </ul>
 
 <!-- AddThis Follow BEGIN -->
-<p>Follow Me</p>
+<h6 class="vlist">Follow Me</h6>
 <div class="addthis_toolbox addthis_32x32_style addthis_default_style">
+<a class="addthis_button_google_follow" addthis:userid="101226668323584222394"></a>
 <a class="addthis_button_facebook_follow" addthis:userid="xianminx"></a>
-<a class="addthis_button_twitter_follow" addthis:userid="xianminx"></a>
 <a class="addthis_button_linkedin_follow" addthis:userid="xianminx"></a>
-<a class="addthis_button_google_follow" addthis:userid="xianminx"></a>
+<a class="addthis_button_twitter_follow" addthis:userid="xianminx"></a>
 </div>
 <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4fdf49b46dac2571"></script>
 <!-- AddThis Follow END -->
 
+<br/>
+
+<h6 class="vlist">新浪微博</h6>
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=1&ptype=1&speed=300&skin=1&isTitle=1&noborder=0&isWeibo=1&isFans=1&uid=2063991842&verifier=e0e8dc08&dpc=1"></iframe>
 
 
