--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -78,7 +78,8 @@ topnav:
 
 <!-- AddThis Follow BEGIN -->
 <h6 class="vlist">Follow Me</h6>
-<div class="addthis_toolbox addthis_32x32_style addthis_default_style">
+<br/>
+<div class="addthis_toolbox addthis_default_style addthis_default_style">
 <a class="addthis_button_google_follow" addthis:userid="101226668323584222394"></a>
 <a class="addthis_button_facebook_follow" addthis:userid="xianminx"></a>
 <a class="addthis_button_linkedin_follow" addthis:userid="xianminx"></a>
