add blog android dependency injection

--- a/blog/_layouts/default.liquid
+++ b/blog/_layouts/default.liquid
@@ -60,7 +60,6 @@ topnav:
           <a href="{{ t.href }}"{% if t.title %} title="{{ t.title }}"{% endif %}>{{ t.text }}</a>
           </li>
           {% endfor %}
-          <li><a href="http://github.com/xianminx">Repositories</a></li>
         </ul>
       </div>
     </div>
@@ -89,10 +88,15 @@ topnav:
               href="http://android-developers.blogspot.com/"
               ><img src="http://android-developers.blogspot.kr/favicon.ico"/>Android Developers Blog</a>
           </li>
-          <li>
+           <li>
             <a
               href="http://saigeethamn.blogspot.com/"
               ><img src="https://www.blogger.com/img/logo-16.png"/> Sai Geetha's Android blog</a>
+          </li>
+          <li>
+            <a
+              href="http://jon.oberheide.org/blog/"
+              ><img src="https://encrypted-tbn2.google.com/images?q=tbn:ANd9GcRo9pLd2k2lx_xG3T0uA7DgpZ0Guu9FMWHPLi5cDeVayZ7uNO0X" height="16" width="16"/>JON.OBERHEIDE.ORG</a>
           </li>
           </ul>
 
