--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -21,8 +21,10 @@ topnav:
 <meta name="language" content="en" />
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+<link rel="stylesheet" type="text/css" href="/css/mindmap.css" />
 <meta property="wb:webmaster" content="85ada6b02f0f02d5" />
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=4064321344" type="text/javascript" charset="utf-8"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 
 <!-- Google Analytics -->
 <script type="text/javascript">
@@ -38,6 +40,22 @@ topnav:
   })();
 
 </script>
+
+
+<script type="text/javascript">
+jQuery(document).ready(function() {
+  jQuery(".content").hide();
+  //toggle the componenet with class msg_body
+  jQuery(".heading").click(function()
+  {
+    jQuery(this).next(".content").slideToggle(500);
+  });
+});
+</script>
+
+
+
+
 </head>
 
 {% assign navTitle = 'Blog' %}
