--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -16,7 +16,7 @@ topnav:
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:wb="http://open.weibo.com/wb">
 <head>
-<title>Lucas Xu : {{ page.title }} </title>
+<title>{{ page.title }} </title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="language" content="en" />
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
