--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -7,7 +7,7 @@ topnav:
     href: /
   - text: Archives
     href: /archives/
-  - text: Categories
+  - text: Tags
     href: /tags/
   - text: Other
     href: /other/
