--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -56,6 +56,39 @@ var jiathis_config = {
   {% endfor %}
 
 </small>
+<!--Disqus -->
+    <div id="disqus_thread"></div>
+        <script type="text/javascript">
+		        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+			        var disqus_shortname = 'xianminx'; // required: replace example with your forum shortname
+
+				        /* * * DON'T EDIT BELOW THIS LINE * * */
+					        (function() {
+							            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+								                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+										            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+											            })();
+												        </script>
+													    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+													        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+ <script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'xianminx'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+    </script>
+    
+
+      
+
+
+<!--
 <!-- 新浪微薄 评论箱 -->
 <script type="text/javascript">
 (function(){
@@ -71,7 +104,7 @@ window.WBComment.init({
 });
 </script>
 <!-- 新浪微薄 评论箱 -->
-
+-->
 
 <!-- Google Analytics -->
 <script type="text/javascript">
