update css to include bootstrap style, using bootstrap cdn. remove useless print.css

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -19,7 +19,14 @@ topnav:
 <title>{{ page.title }} </title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="language" content="en" />
+
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
+
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
+
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+
+
 <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 <link rel="stylesheet" type="text/css" href="/css/mindmap.css" />
 <meta property="wb:webmaster" content="85ada6b02f0f02d5" />
