--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -73,7 +73,7 @@ jQuery(document).ready(function() {
 <body>
 <div class="page_margins">
   <div id="header">
-    <h2><a href="http://xianminx.github.com">Lucas Xu   徐仙明</a></h2>
+    <h2><a href="http://xianminx.github.com">lucas</a></h2>
     <div class="clear"></div>
 
     <!-- begin: main navigation #nav -->
