--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -23,13 +23,14 @@ topnav:
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
-
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="//masonry.desandro.com/masonry.pkgd.min.js" type="text/javascript" charset="utf-8"></script>
 
 
 <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 <link rel="stylesheet" type="text/css" href="/css/mindmap.css" />
 <meta property="wb:webmaster" content="85ada6b02f0f02d5" />
+
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=4064321344" type="text/javascript" charset="utf-8"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 
@@ -59,6 +60,12 @@ jQuery(document).ready(function() {
   });
 });
 </script>
+
+
+<style>
+.item { width: 25%; }
+.item.w2 { width: 50%; }
+</style>
 
 
 
@@ -101,7 +108,8 @@ jQuery(document).ready(function() {
     <div id="col3">
       <div id="col3_content">
      
-      
+
+
 
 <!-- AddThis Follow BEGIN -->
 <h6 class="vlist">Follow Me</h6>
@@ -116,6 +124,14 @@ jQuery(document).ready(function() {
 <!-- AddThis Follow END -->
 
 <br/>
+ 
+
+ <a href="http://stackoverflow.com/users/1381034/lucas">
+<img src="http://stackoverflow.com/users/flair/1381034.png" width="208" height="58" alt="profile for lucas at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for lucas at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+</a>
+
+<br />
+
 
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=1&ptype=1&speed=300&skin=1&isTitle=1&noborder=0&isWeibo=1&isFans=1&uid=2063991842&verifier=e0e8dc08&dpc=1"></iframe>
 
