--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -16,6 +16,8 @@ topnav:
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:wb="http://open.weibo.com/wb">
 <head>
+<meta name="wumiiVerification" content="488b82f0-c491-4adc-9a6c-511af901c26e" />
+
 <title>{{ page.title }} </title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="language" content="en" />
@@ -108,7 +110,7 @@ jQuery(document).ready(function() {
     </div>
     <div id="col3">
       <div id="col3_content">
-     
+
 
 
 
@@ -125,7 +127,7 @@ jQuery(document).ready(function() {
 <!-- AddThis Follow END -->
 
 <br/>
- 
+
 
  <a href="http://stackoverflow.com/users/1381034/lucas">
 <img src="http://stackoverflow.com/users/flair/1381034.png" width="208" height="58" alt="profile for lucas at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for lucas at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
