add test for baidu 图+http://imageplus.baidu.com/install.html

--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -126,3 +126,9 @@ var jiathis_config = {
   })();
 
 </script>
+
+
+<script>
+var cpro_id = 'u12345';
+</script>
+<script src="http://cpro.baidustatic.com/cpro/ui/i.js"></script>
