--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,83 +1,12 @@
----
-# -*- html -*- mode
-topnav:
-  - text: About
-    href: /about/
-  - text: Blog
-    href: /
-  - text: Archives
-    href: /archives/
-  - text: Other
-    href: /other/
----
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:wb="http://open.weibo.com/wb">
-<head>
-<meta name="wumiiVerification" content="488b82f0-c491-4adc-9a6c-511af901c26e" />
-
-<title>{{ page.title }} </title>
-<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<meta name="language" content="en" />
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-
-<link rel="stylesheet" type="text/css" href="/css/default.css" />
-
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="//masonry.desandro.com/masonry.pkgd.min.js" type="text/javascript" charset="utf-8"></script>
-<link href="//fezvrasta.github.io/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
-<link href="//fezvrasta.github.io/bootstrap-material-design/dist/css/material-wfont.min.css" rel="stylesheet">
-<link href="//fezvrasta.github.io/snackbarjs/dist/snackbar.min.css" rel="stylesheet">
+<html xmlns:wb="http://open.weibo.com/wb" lang="{{ page.lang | default: site.lang | default: "en" }}">
 
 
-<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-<link rel="stylesheet" type="text/css" href="/css/mindmap.css" />
-<meta property="wb:webmaster" content="85ada6b02f0f02d5" />
-
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=4064321344" type="text/javascript" charset="utf-8"></script>
-
-<!-- Google Analytics -->
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-32905076-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
-
-<script type="text/javascript">
-jQuery(document).ready(function() {
-  jQuery(".content").hide();
-  //toggle the componenet with class msg_body
-  jQuery(".heading").click(function()
-  {
-    jQuery(this).next(".content").slideToggle(500);
-  });
-});
-</script>
-
-
-<style>
-.item { width: 25%; }
-.item.w2 { width: 50%; }
-</style>
-
-
-
-
-</head>
-
+{% include head.html %}
 {% assign navTitle = 'Blog' %}
-{% for t in page.topnav %}
+{% for t in site.topnav %}
 {% if t.text == page.title %}{% assign navTitle = page.title %}{% endif %}
 {% endfor %}
 
@@ -101,7 +30,7 @@ jQuery(document).ready(function() {
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
-                  {% for t in page.topnav %}
+                  {% for t in site.topnav %}
                   <li{% if t.text == navTitle %} class="active"{% endif %}>
                   <a href="{{ t.href }}"{% if t.title %} title="{{ t.title }}"{% endif %}>{{ t.text }}
                     <div class="ripple-wrapper"></div>
@@ -158,27 +87,6 @@ jQuery(document).ready(function() {
     </div>
     <div class="clear"></div>
   </div>
-  <!-- end: #main -->
-
-  <!-- begin: #footer -->
-  <!-- <div id="footer">
-    <div class="hlist">
-      <ul>
-        {% for t in page.topnav %}
-        <li{% if t.text == navTitle %} class="active"{% endif %}>
-        <a href="{% if t.http %}{{ t.http }}{% else %}{{ t.href }}{% endif %}"
-        {% if t.title %} title="{{ t.title }}"{% endif %}
-        >{{ t.text }}</a>
-        {% if forloop.last == false %} | {% endif %}
-        </li>
-        {% endfor %}
-        <li> | <a href="/feed.xml"><img src="http://www.bookinglive.com/assets/Uploads/Icons/RSS-Feed-2.png" width="20" height="20" align="top"> RSS </a></li>
-        <li>&ndash; updated {{ site.time | date:"%Y-%m-%d" }}</li>
-      </ul>
-    </div>
-  </div> -->
-  <!-- end: #footer -->
-
 </div>
 
 
