change the theme and style of the blog

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,15 +20,15 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
+          {% if site.author.github %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            {% include icon-github.html username=site.author.github %}
           </li>
           {% endif %}
 
-          {% if site.twitter_username %}
+          {% if site.author.twitter %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            {% include icon-twitter.html username=site.author.twitter %}
           </li>
           {% endif %}
         </ul>
