--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,25 @@
 ---
 layout: default
 ---
+
 <div class="post">
-  <h3>{{page.title}}</h3>
-
-<br/>
-
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
-<small class="meta final">
-  {{ page.date | date:"%d %b %Y" }}
-  {% for t in page.tags %}
-  {% if forloop.first == true %} | {% endif %}
-  <a href='/tags#{{ t | escape }}'>{{ t }}</a>{% if forloop.last == false %}, {% endif %}
-  {% endfor %}
-
-</small>
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
