fix mathjax config

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
                   TagIndent: ".8em",
                   MultLineWidth: "85%",
                   equationNumbers: {
-                     autoNumber: "AMS",
+                     autoNumber: "all",
                   },
                   unicode: {
                      fonts: "STIXGeneral,'Arial Unicode MS'"
