--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,31 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
  
-
+  <script type="text/javascript" src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script>
+          MathJax.Hub.Config({
+              config: ["MMLorHTML.js"],
+              extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
+              jax: ["input/TeX"],
+              tex2jax: {
+                  inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                  displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+                  processEscapes: false
+              },
+              TeX: {
+                  TagSide: "right",
+                  TagIndent: ".8em",
+                  MultLineWidth: "85%",
+                  equationNumbers: {
+                     autoNumber: "all",
+                  },
+                  unicode: {
+                     fonts: "STIXGeneral,'Arial Unicode MS'"
+                  }
+              },
+              showProcessingMessages: false
+          });
+  </script>
 
   
 </head>
