--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,6 +11,8 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/archives">Archives</a>
+
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
